--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <h2>Summary</h2>
       <div class="btn">
 
-        <button id="btn-s-1"><span><img src="./assets/images/icon-reaction.svg" alt="">Reaction</span> <span><strong>80</strong> / 100</span></button>
-        <button id="btn-s-2"><span><img src="./assets/images/icon-memory.svg" alt="">Memory</span> <span><strong>92</strong> / 100</span></button>
-        <button id="btn-s-3"><span><img   src="./assets/images/icon-verbal.svg" alt="">Verbal</span><span><strong>61</strong> / 100</span></button>
-        <button id="btn-s-4"><span><img src="./assets/images/icon-visual.svg" alt="">Visual</span><span><strong>72</strong> / 100</span></button>
+        <button id="btn-s-1"><span><img src="icon-reaction.svg" alt="">Reaction</span> <span><strong>80</strong> / 100</span></button>
+        <button id="btn-s-2"><span><img src="icon-memory.svg" alt="">Memory</span> <span><strong>92</strong> / 100</span></button>
+        <button id="btn-s-3"><span><img   src="icon-verbal.svg" alt="">Verbal</span><span><strong>61</strong> / 100</span></button>
+        <button id="btn-s-4"><span><img src="icon-visual.svg" alt="">Visual</span><span><strong>72</strong> / 100</span></button>
         
       </div>
       <div class="btn-cont">
